Fix rent card images not loading on Safari (eager load, explicit object-fit)

--- a/front/src/app/scss/components/_rent-card.scss
+++ b/front/src/app/scss/components/_rent-card.scss
@@ -32,6 +32,7 @@
     picture {
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
   }
 
